--- a/components/Nav/NavPopup/NavPopup.module.css
+++ b/components/Nav/NavPopup/NavPopup.module.css
@@ -66,7 +66,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: start;
+    align-items: flex-start;
 }
 .popup_spacer {
     height: 25px;
