--- a/components/Companies/Company/Company.module.css
+++ b/components/Companies/Company/Company.module.css
@@ -55,7 +55,7 @@
     height: auto;
     min-height: 50%;
     display: flex;
-    text-align: start;
+    text-align: flex-start;
     justify-content: flex-start;
     align-items: flex-start;
 }
