--- a/components/Contacts/Contacts.module.css
+++ b/components/Contacts/Contacts.module.css
@@ -1,13 +1,16 @@
 .contacts_container {       
     padding-top: 50px;
-    min-height: 500px;
-    width: 90%;
+    min-height: 550px;
+    width: 100%;
     display: flex;      
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 100px;
+    padding-bottom: 100px;
     scroll-margin-top: 50px;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: #1d1d1d;
 }
 
 .persons_grid {
