--- a/components/ProjectPage/ProjectPage.module.css
+++ b/components/ProjectPage/ProjectPage.module.css
@@ -1,7 +1,6 @@
 .project_page_container {
     width: 100%;
     min-height: 120vh;
-    height: min-content;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -55,10 +54,10 @@
     background: linear-gradient(to top, rgba(0,0,0,0.8), rgba(0,0,0,0));
 }
 .pp_bottom_container {
-    padding-top: 5%;
+    padding-top: 75px;
     padding-bottom: 100px;
-    min-height: 50vh;
-    width: 90%;
+    padding-left: 5%;
+    padding-right: 5%;
     display: flex;  
     flex-direction: row;
     justify-content: center;
