--- a/components/ProjectPage/Text/Text.module.css
+++ b/components/ProjectPage/Text/Text.module.css
@@ -27,6 +27,7 @@
     font-size: 1.3em;
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
+    padding-bottom: 25px;
 }
 .location {
     line-height: 150%;
@@ -35,13 +36,13 @@
 }
 .text_facts {
     width: 90%;
-    line-height: 200%;
+    line-height: 120%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
     border-bottom: 1px solid rgb(255, 139, 6);
-    padding-bottom: 10px;
+    padding-bottom: 25px;
 }
 .status_container {
     margin-top: 0px;
@@ -59,6 +60,8 @@
     font-size: 1.5em;
     font-family: 'Raleway', sans-serif;
     font-weight: 200;
+    padding-bottom: 10px;
+    margin-top: 25px;
 }
 .text_status {
     width: 90%;
@@ -110,9 +113,6 @@
         font-size: 1.2vw;
         font-size: max(1.3em, 1.2vw);
     }
-    .text_facts {
-        line-height: 300%;
-    }
 }
 @media (min-width: 1500px) and (max-width: 1800px) {
     .text_fact {
@@ -126,9 +126,6 @@
     .text_description { 
         font-size: 1.2vw;
         font-size: max(1.2em, 1.2vw);
-    }
-    .text_facts {
-        line-height: 300%;
     }
 }
 @media (min-width: 1201px) and (max-width: 1499px) {
@@ -161,9 +158,6 @@
     .text_outer_container {
         width: 100%;
     }
-    .text_fact {
-        line-height: 200%;
-    }
     .text_desc_container {
         width: 100%;
     }
@@ -188,11 +182,6 @@
     }
     .website_link {
         font-size: 6vw;
-    }
-    .text_fact {
-        white-space: normal;
-        line-height: 200%;
-        font-size: 0.9em;
     }
     .text_status {
         font-size: 0.9em;
