--- a/components/ProjectPage/ProjectLink/ProjectLink.module.css
+++ b/components/ProjectPage/ProjectLink/ProjectLink.module.css
@@ -7,7 +7,7 @@
     justify-content: flex-end;
     align-items: center;
     text-decoration: none;
-    font-size: max(0.8em, 1vw);
+    font-size: 16px;
     color: white;
     font-weight: bold;
     font-family: 'Raleway', sans-serif;
