--- a/components/ProjectPage/Map/Map.module.css
+++ b/components/ProjectPage/Map/Map.module.css
@@ -15,7 +15,10 @@
     }
 }
 .map_container {
-    width: 90%;
+    width: 100%;
+    padding-left: 5%;
+    padding-right: 5%;
+    max-width: 1880px;
     height: 400px;
     padding-bottom: 100px;
     display: flex;
