--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -2,18 +2,20 @@
     height: auto;
     min-height: 50vh;
     width: 100%;
+    padding-left: 5%;
+    padding-right: 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     scroll-margin-top: 50px;
     background-color: #212121;
     padding-bottom: 150px;
     overflow: hidden;
 }
 .about_header {    
-    width: 80%;
-    padding-left: 5%;
+    width: 100%;
+    max-width: 1880px;
     height: 150px;
     display: flex;
     justify-content: flex-start;
@@ -48,9 +50,8 @@
     background-color: rgb(255, 139, 6);
 }
 .tweets_container {
-    padding-left: 5%;
-    width: max-content;
-    max-width: 90vw;
+    max-width: 1880px;
+    width: 100%;
 }
 @media screen and (max-width: 1000px) {
     .about_header_inner {
