--- a/components/ProjectPage/ProjectPage.module.css
+++ b/components/ProjectPage/ProjectPage.module.css
@@ -16,6 +16,8 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, .4);
+    padding-left: 5%;
+    padding-right: 5%;
 }
 .under_nav_inner {
     width: 100%;
@@ -24,8 +26,6 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-left: 5%;
-    padding-right: 5%;
 }
 .pp_status {
     height: 300px;
@@ -58,7 +58,7 @@
     padding-bottom: 20px;
     width: 100%;
     max-width: 1880px;
-    padding-left: 5%;
+    margin-left: 5%;
     display: flex;  
     justify-content: flex-start;
     align-items: center;
@@ -71,8 +71,8 @@
     padding-top: 50px;
     max-width: 1880px;
     padding-bottom: 100px;
-    padding-left: 5%;
-    padding-right: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
     display: flex;  
     flex-direction: row;
     justify-content: center;
