--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -13,6 +13,11 @@
     padding-bottom: 150px;
     overflow: hidden;
 }
+.about_col {
+    display: flex;
+    flex-direction: column;
+    
+}
 .about_header {    
     width: 100%;
     max-width: 1880px;
