--- a/components/ProjectPage/Text/Text.module.css
+++ b/components/ProjectPage/Text/Text.module.css
@@ -35,16 +35,18 @@
     width: 100%;
 }
 .text_facts {
-    width: 90%;
     line-height: 120%;
+    width: 90%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
+    gap: 10px;
     align-items: flex-start;
     border-bottom: 1px solid rgb(255, 139, 6);
     padding-bottom: 25px;
 }
 .status_container {
+    width: 100%;
     margin-top: 0px;
 }
 .text_fact { 
@@ -56,10 +58,10 @@
 }
 .text_header {
     color: black;
-    font-size: 16px;
+    font-size: 20px;
     font-family: 'Raleway', sans-serif;
     font-weight: 200;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     margin-top: 25px;
 }
 .text_status {
@@ -87,7 +89,6 @@
 }
 .website_link_container {
     padding-top: 25px;
-    width: 90%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -97,8 +98,7 @@
     text-decoration: none;
     border-bottom: 1px solid rgb(255, 139, 6);
     font-size: 16px;
-    font-family: 'Raleway', serif;
-    font-weight: 200;
+    font-family: 'Raleway', sans-serif;
     -webkit-transition: color .5s;
     -moz-transition:    color .5s;
     -ms-transition:     color .5s;
@@ -118,8 +118,5 @@
     }
     .text_status {
         width: 100%;
-    }
-    .text_description {
-        font-size: 14px;
     }
 }
