--- a/components/Nav/NavPopup/NavPopup.module.css
+++ b/components/Nav/NavPopup/NavPopup.module.css
@@ -1,42 +1,31 @@
 .nav_modal_overlay {
     position: fixed;
-    top: 65px;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 250;   
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    outline: none;
-}
-/* This fixed something, I would not touch it.*/
-.ReactModalPortal {
-    position: absolute;
-    height: 1px;
-    width: 1px;
-}
-.nav_image {
-    max-height: 630px;
-}
-.animated_overlay {
-    position: absolute;
-    background-color: #1D1D1D;
     top: 0;
+    bottom: 0;
     left: 0;
     right: 0;
-    bottom: 0;
     z-index: 100;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    align-items: center;
+    background-color: rgba(0, 0, 0, 0.45);
+    display: flex;
+    justify-content: flex-start;
+}
+.popup_container {
+    height: 100%;
+    max-height: 100vh; /* Changed from min-height */
+    width: 400px;
+    max-width: 100%;
+    background-color: #1D1D1D;
+    display: flex;
+    flex-direction: column;
     justify-items: center;
-    padding: 5%;
+    padding-top: 75px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
     overflow-y: scroll;
 }
 @media screen and (max-width: 1000px) {
-    .animated_overlay { 
+    .popup_container { 
         grid-template-columns: 1fr;
     }
     .nav_image {
@@ -51,18 +40,9 @@
     width: 100%;
     height: 100%;
     color: white;
-}
-.projects_navigation {
-    width: 100%;
-    height: 90%;
-    min-height: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-}   
+}  
 .individual_project_link_container {
-    width: 95%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -72,15 +52,14 @@
     height: 25px;
 }   
 .popup_link {
-    height: 5%;
     font-size: 1.4em;
-    width: 90%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     text-decoration: none;
     color: white;
-    height: 75px;
+    min-height: 75px;
     outline: none;
     border-bottom: 1px solid rgb(79, 79, 79);
     font-family: 'Raleway', sans-serif;
@@ -92,11 +71,10 @@
     border-bottom: 1px solid rgb(255, 139, 6);
 }
 .popup_project_link {
-    width: 90%;
+    width: 100%;
     font-size: 1.1em;
     text-decoration: none;
     color: white;
-    min-height: 25px;
     line-height: 55px;
     display: flex;
     align-items: center;
@@ -111,10 +89,8 @@
 }
 .popup_companies_link {
     width: 100%;
-    height: 15%;
 }
 .popup_contact_link {
     width: 100%;
-    height: 15%;
 }
 
