--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -23,6 +23,7 @@
     max-width: 1880px;
     height: 150px;
     display: flex;
+    font-family: var(--kameron), sans-serif;
     justify-content: flex-start;
     align-items: center;
 }
@@ -30,7 +31,6 @@
     width: 100%;
     font-size: 40px;
     height: 51px;
-    font-family: 'Rockwell Nova', sans-serif;
     color: #1D1D1D;
     color: white;
     display: flex;  
