--- a/components/Companies/Companies.module.css
+++ b/components/Companies/Companies.module.css
@@ -40,13 +40,13 @@
     width: 100%;
 }
 .companies_text_header {
-    font-family: 'Rockwell Nova', sans-serif;
     font-size: 2.5em;
     font-size: 40px;
     font-variant: small-caps;
     width: 100%;
     height: 51px;
     display: flex;
+    font-family: var(--kameron), sans-serif;
     justify-content: flex-start;
     align-items: center;
     position: relative;
