--- a/components/Companies/Company/Company.module.css
+++ b/components/Companies/Company/Company.module.css
@@ -31,7 +31,7 @@
     width: max-content;
     position: relative;
     font-size: 1.5em;
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--raleway), sans-serif;
     font-weight: 400;
     height: 20%;
     display: flex;
@@ -61,7 +61,7 @@
 }
 .company_desc {
     padding-left: 10px;
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--raleway), sans-serif;
     font-weight: 400;
 }
 .company_button_container {
@@ -95,7 +95,7 @@
     color: white;
     border-bottom: 2px solid rgb(240, 129, 2);
     text-align: center;
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--raleway), sans-serif;
     font-weight: 400;
 }
 .company_link:hover {
