--- a/components/ProjectSlider/ProjectSlider.module.css
+++ b/components/ProjectSlider/ProjectSlider.module.css
@@ -77,7 +77,7 @@
     padding-bottom: 3%;
 }
 .project_mainpage_text_header {
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--raleway), sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 32px;
@@ -107,7 +107,7 @@
     }
 }
 .project_mainpage_text_description {
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--raleway), sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -122,7 +122,7 @@
     max-height: 92px;
 }
 .project_mainpage_text_link {
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--raleway), sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -172,7 +172,7 @@
     font-size: 40px;
     line-height: 110%;
     color: #FFFFFF;
-    font-family: 'Rockwell Nova', sans-serif;
+    font-family: var(--kameron), sans-serif;
     display: flex;  
     justify-content: flex-start;
     align-items: center;
@@ -269,7 +269,7 @@
 .slider_text {
     width: 100%;
     height: 10%;
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--raleway), sans-serif;
     font-weight: 400;
     color: white;
 }
