--- a/components/ProjectPage/Gallery/Gallery.module.css
+++ b/components/ProjectPage/Gallery/Gallery.module.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .pp_gallery {
@@ -13,6 +14,7 @@
     column-count: 2;
     column-gap: 1;
     line-height: 2;
+    position: relative;
 }
 
 .gallery_picture {
@@ -26,6 +28,7 @@
 .gallery_image {
     width: 100%;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.37);
+    cursor: pointer;
 }
 
 .gallery_image:hover {
