--- a/components/Nav/NavPopup/NavPopup.module.css
+++ b/components/Nav/NavPopup/NavPopup.module.css
@@ -22,7 +22,7 @@
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 10px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 @media screen and (max-width: 1000px) {
     .popup_container { 
