--- a/components/Contacts/Person/Person.module.css
+++ b/components/Contacts/Person/Person.module.css
@@ -4,12 +4,12 @@
     background: #212121;
     box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 50% 10% 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     box-sizing: border-box;
     padding: 20px 15px;
-    align-items: center;
+    align-items: flex-start;
     position: relative;
 }
 .d {
@@ -20,7 +20,8 @@
     background-color: rgb(50, 47, 47);
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 2px;
+    padding-left: 5px;
+    width: 100%;
     border-right: 2px solid rgb(255, 139, 6);
 }
 .p {
@@ -29,21 +30,25 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    gap: 5px;
 }
 .email_contact {
     font-size: 16px;
     font-weight: 400;
-    color: rgb(226, 225, 225);
+    color: rgb(202, 201, 201);
     line-height: 19.8px;
+    text-decoration: none;
+    font-family: var(--kameron), sans-serif;
     text-decoration: none;
 }
 .number_contact {
     font-size: 16px;
     font-weight: 400;
-    color: rgb(226, 225, 225);
+    color: rgb(202, 201, 201);
     line-height: 19.8px;
     text-decoration: none;
     padding-bottom: 3px;
+    font-family: var(--kameron), sans-serif;
 } 
 .person_name {
     font-size: 24px;
@@ -52,6 +57,7 @@
     margin-block-start: 0;
     margin-block-end: 0;
     line-height: 26px;
+    font-family: var(--kameron), sans-serif;
 }
         
 .person_title_container {
