--- a/components/Companies/Company/Company.module.css
+++ b/components/Companies/Company/Company.module.css
@@ -1,5 +1,5 @@
 .company_container {
-    width: 100%;
+    width: 95%;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -10,13 +10,13 @@
 }
 .company_text {
     position: absolute;
-    --padding: 1.5rem;
+    --padding: 10px;
     padding: var(--padding);
-    height: 80%;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: flex-start;
     color: white;
     z-index: 2;
@@ -33,11 +33,12 @@
     font-size: 1.5em;
     font-family: var(--raleway), sans-serif;
     font-weight: 400;
-    height: 20%;
+    /* height: 20%; */
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding-left: 10px;
+    padding-bottom: 10px;
 }
 .company_name_container::after {
     content: '';
@@ -52,8 +53,8 @@
 }
 .company_text_inner {
     width: 90%;
-    height: auto;
-    min-height: 50%;
+    padding-top: 10px;
+    padding-bottom: 20px;
     display: flex;
     text-align: flex-start;
     justify-content: flex-start;
@@ -103,10 +104,10 @@
 }
 
 /* Media Queries */
-@media (hover) {
+/* @media (hover) { */
     .company_text {
-        justify-content: center;
-        transform: translateY(65%);
+        justify-content: flex-start;
+        transform: translateY(85%);
         transition: transform 500ms ease;
     }
     .commpany.company_name_container {
@@ -141,21 +142,9 @@
     .company_container:focus-within .company_name_container::after {
         transform: scaleX(1);
     }
-}
-
-/* @media (prefers-reduced-motion: reduce) {
-    * {
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-        scroll-behavior: auto !important;
-    }
-} */
+/* } */
 
 @media (max-width: 600px) {
-    .company_name_container {
-        height: 10%;
-    }
     .company_container {
         width: 100%;
         box-shadow: 10px 10px 20px #bebebe, -10px -10px 20px #d6d2d2;
@@ -163,169 +152,20 @@
         border-radius: 10px;
     }
     .company_text {
-        transform: translateY(65%);
+        /* transform: translateY(65%); */
         bottom: 0%;
     }
     .company_text_inner {
         font-size: 16px;
-        min-height: 40%;
-        height: auto;
     }
     .company_button_container {
-        height: 10%;
+
     }
     .company_link {
-        font-size: 5.5vw;
-        font-size: min(1.8em, 5.5vw);
+
     }
     .company_name_container {
-        font-size: 6vw;
-        font-size: min(2em, 6vw);
+
         padding-bottom: 5px;
     }
 }
-
-@media (min-width: 601px) and (max-width: 900px) {
-    .company_container {
-        width: 95%;
-        height: 95%;
-    }
-    .company_text_inner {
-        font-size: 2vw;
-        font-size: max(0.6em, 2vw);
-    }
-    .company_link {
-        font-size: 2vw;
-        font-size: max(.8em, 2vw);
-    }
-    .company_name_container {
-        font-size: 2.2vw;
-        font-size: max(1em, 2.2vw);
-        height: min-content;
-    }
-}
-@media (min-width: 901px) and (max-width: 1100px) { 
-    .company-container {
-        width: 95%;
-        height: 95%;
-    }
-    .company-text-inner {
-        font-size: 1.5vw;
-        font-size: max(0.6em, 1.5vw);
-        height: min-content;
-        min-height: 50%;
-        display: flex;
-        align-items: center;    
-    }
-    .company-link {
-        font-size: 1.8vw;
-        font-size: max(.8em, 1.8vw);
-    }
-    .company-name-container {
-        font-size: 2.2vw;
-        font-size: max(1em, 2.2vw);
-    }
-}
-@media (min-width: 1101px) and (max-width: 1300px) {
-    .company-container {
-        width: 95%;
-        height: 95%;
-    }
-    .company-text-inner {
-        font-size: 1.3vw;
-        font-size: max(0.6em, 1.3vw);
-        height: min-content;
-        min-height: 50%;
-        display: flex;
-        align-items: center;    
-    }
-    .company-link {
-        font-size: 1.6vw;
-        font-size: max(.8em, 1.6vw);
-    }
-    .company-name-container {
-        font-size: 2vw;
-        font-size: max(1em, 2vw);
-    }
-}
-@media (min-width: 1301px) {
-    .company-container {
-        width: 95%;
-        height: auto;
-    }    
-    .company-text-inner {
-        font-size: 1vw;
-        font-size: max(0.7em, 1vw);
-    }
-    .company-link {
-        font-size: 1.2vw;
-        font-size: max(1em, 1.2vw);
-    }
-    .company-name-container {
-        font-size: 1.5vw;
-        font-size: max(1.2em, 1.5vw);
-    }
-}
-@media (min-width: 901px) and (max-width: 1100px) { 
-    .company_container {
-        width: 95%;
-        height: 95%;
-    }
-    .company_text_inner {
-        font-size: 1.5vw;
-        font-size: max(0.6em, 1.5vw);
-        height: min-content;
-        min-height: 50%;
-        display: flex;
-        align-items: center;    
-    }
-    .company_link {
-        font-size: 1.8vw;
-        font-size: max(.8em, 1.8vw);
-    }
-    .company_name_container {
-        font-size: 2.2vw;
-        font-size: max(1em, 2.2vw);
-    }
-}
-@media (min-width: 1101px) and (max-width: 1300px) {
-    .company_container {
-        width: 95%;
-        height: 95%;
-    }
-    .company_text_inner {
-        font-size: 1.3vw;
-        font-size: max(0.6em, 1.3vw);
-        height: min-content;
-        min-height: 50%;
-        display: flex;
-        align-items: center;    
-    }
-    .company_link {
-        font-size: 1.6vw;
-        font-size: max(.8em, 1.6vw);
-    }
-    .company_name_container {
-        font-size: 2vw;
-        font-size: max(1em, 2vw);
-    }
-}
-@media (min-width: 1301px) {
-    .company_container {
-        width: 95%;
-        height: auto;
-    }    
-    .company_text_inner {
-        font-size: 1vw;
-        font-size: max(0.7em, 1vw);
-    }
-    .company_link {
-        font-size: 1.2vw;
-        font-size: max(1em, 1.2vw);
-    }
-    .company_name_container {
-        font-size: 1.5vw;
-        font-size: max(1.2em, 1.5vw);
-    }
-}
-
