--- a/components/ProjectSlider/ProjectSlider.module.css
+++ b/components/ProjectSlider/ProjectSlider.module.css
@@ -44,7 +44,6 @@
 .mainpage_project_link {
     width: 100%;
     height: 100%;
-    text-decoration: none;
 }
 .mainpage_project_img_container {
     width: 100%;
@@ -87,6 +86,7 @@
     padding-left: 5%;
     height: 60px;
     margin: 0;
+    overflow: hidden;
 }
 .project_mainpage_text_header::after {
     content: '';
@@ -116,10 +116,12 @@
     color: #FFFFFF;
     max-width: 70%;
     padding-left: 5%;
+    padding-top: 10px;
     margin-bottom: 20px;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
     overflow: hidden;
-    text-overflow: ellipsis;
-    max-height: 92px;
 }
 .project_mainpage_text_link {
     font-family: var(--raleway), sans-serif;
