--- a/components/ProjectSlider/ProjectSlider.module.css
+++ b/components/ProjectSlider/ProjectSlider.module.css
@@ -30,16 +30,34 @@
     width: 100%;
     display: none;
 }
-.mobile_project_select {
-    background-color: transparent;
-    height: 50px;
+.listbox {
+    position: relative;
+    display: none;
+}
+.listbox_button {
     width: 100%;
+    padding: 10px;
     border: none;
-    border-bottom: 2px solid rgb(255, 139, 6);
-    color: #FFFFFF;
+    cursor: pointer;
     font-weight: 500;
     font-size: 20px;
-    display: none;
+    text-align: start;
+    background-color: transparent;
+    border-bottom: 2px solid rgb(255, 139, 6);
+}
+.listbox_label {
+    margin-bottom: 8px;
+    font-size: 16px;
+    font-weight: bold;
+}
+  
+.listbox_options {
+    width: 100%;
+    margin-top: 4px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    max-height: 150px;
+    overflow-y: auto;
 }
 .mainpage_project_link {
     width: 100%;
@@ -292,7 +310,7 @@
     .project_slider_container {
         display: none;
     }
-    .mobile_project_select {
+    .listbox {
         display: block;
     }
     .mobile_header {
