--- a/components/Companies/Companies.module.css
+++ b/components/Companies/Companies.module.css
@@ -9,7 +9,7 @@
     padding-left: 5%;
     padding-right: 5%;
     position: relative;
-    background-color: #1d1d1d;
+    background-color: #212121;
 }
 .companies_inner_container {
     max-width: 1880px;
