--- a/components/ProjectSlider/ProjectSlider.module.css
+++ b/components/ProjectSlider/ProjectSlider.module.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     scroll-margin-top: 100px;
-    background-color: #212121;
+    background-color: #1d1d1d;
     padding-bottom: 150px;
     padding-top: 150px;
     padding-left: 5%;
@@ -210,7 +210,7 @@
     height: 40px;
     color: #FFFFFF;
     opacity: 0.5;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 400;
     line-height: 160%;
     cursor: pointer;
