--- a/components/EntryView/EntryView.module.css
+++ b/components/EntryView/EntryView.module.css
@@ -21,7 +21,7 @@
     right: 5%;
     transform: translate(0, -50%);
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 .entry_view_inner_container {
