--- a/components/EntryView/EntryView.module.css
+++ b/components/EntryView/EntryView.module.css
@@ -21,11 +21,12 @@
     right: 5%;
     transform: translate(0, -50%);
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 }
 .entry_view_inner_container {
     max-width: 1880px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -33,15 +34,15 @@
 }
 .line {
     font-size: 4vw;
-    font-size: max(4vw, .5em);
+    font-size: min(max(4vw, .5em), 70px);
     width: 100%;
+    max-width: 1200px;
     height: min-content;    
     color: #FFFFFF;
     font-family: var(--raleway), sans-serif;
     line-height: 100%;
     font-weight: 800;
     text-shadow: 4px 4px 10px #000000;
-    /* font-size: 56px; */
     line-height: 110%;
     height: min-content;
 }
@@ -57,9 +58,6 @@
 }
 
 @media (min-width: 450px) and (max-width: 600px) {
-    .entry_view_inner_container {   
-        width: 90%;
-    }
     .line { 
         font-size: 2em;
         font-size: max(6.5vw, 2em);
@@ -75,9 +73,6 @@
     .entry_view_outer_container {
         max-height: 88vh;
     }
-    .entry_view_inner_container {
-        width: 90%;
-    }
     .line { 
         font-size: 7vw;
         font-size: max(7vw, 0.8em);
@@ -92,7 +87,6 @@
         max-height: 92vh;
     }
     .entry_view_inner_container {
-        width: 90%;
         top: 20%;
     }
     .line { 
