--- a/components/Contacts/Person/Person.module.css
+++ b/components/Contacts/Person/Person.module.css
@@ -30,6 +30,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 .email_contact {
     font-size: 16px;
