--- a/components/Companies/Companies.module.css
+++ b/components/Companies/Companies.module.css
@@ -30,7 +30,8 @@
 }
 .companies_text {
     width: 100%;
-    height: 150px;
+    padding-top: 50px;
+    padding-bottom: 25px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -117,6 +118,7 @@
 }
 @media screen and (max-width: 1000px) {
     .companies_text_header {
-        font-size: 24px;
+        font-size: 30px;
+        min-height: 51px;
     }
 }
