--- a/components/ProjectSlider/ProjectSlider.module.css
+++ b/components/ProjectSlider/ProjectSlider.module.css
@@ -356,8 +356,8 @@
         display: block;
     }
     .header_inner {
-        font-size: 24px;
+        font-size: 30px;
         padding-top: 0;
-        height: 51px;
+        min-height: 51px;
     }
 }
