Button tweak on projectPage slider

--- a/components/ProjectPage/ImagePopup/ImagePopup.module.css
+++ b/components/ProjectPage/ImagePopup/ImagePopup.module.css
@@ -114,7 +114,8 @@
     cursor: pointer;
 }
 
-.popup_button {
+.swiper_button_prev,
+.swiper_button_next {
     position: fixed;
     top: 50%;
     transform: translate(0, -50%);
