--- a/components/EntryView/EntryView.module.css
+++ b/components/EntryView/EntryView.module.css
@@ -45,6 +45,7 @@
     text-shadow: 4px 4px 10px #000000;
     line-height: 110%;
     height: min-content;
+    opacity: 0;
 }
 .description {
     font-size: 20px;
@@ -55,6 +56,7 @@
     font-weight: 600; 
     max-width: 1000px;
     padding-top: 20px;
+    opacity: 0;
 }
 
 @media (min-width: 450px) and (max-width: 600px) {
