--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #1D1D1D;
+    /* background-color: #1D1D1D; */
     background-color: #212121;
     position: relative;
     padding-left: 5%;
@@ -49,25 +49,6 @@
     justify-content: flex-end;
     align-items: center;
 }
-.policy {
-    color: rgb(226, 225, 225);
-    font-size: 1em;
-    background-color: rgba(0,0,0,0);
-    border: none;
-    -webkit-transition: color .3s;
-    -moz-transition:    color .3s;
-    -ms-transition:     color .3s;
-    -o-transition:      color .3s;
-    transition: color .3;   
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
-.policy:hover {
-    color: rgb(255, 139, 6);
-}
 .footer_befound {   
     display: flex;
     justify-content: flex-end;
@@ -76,65 +57,7 @@
     color: rgb(226, 225, 225);
     font-size: 14px;
 }
-.policy_component {
-    min-width: 70%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
-.policy_close {
-    background-color: rgba(0,0,0,0);
-    border: none;
-    color: white;
-    height: 50%;
-    width: 100%;
-    -webkit-transition: color .3s;
-    -moz-transition:    color .3s;
-    -ms-transition:     color .3s;
-    -o-transition:      color .3s;
-    transition: color .3;   
-    text-align: center;
-}
-.policy_close:hover {
-    color: rgb(255, 139, 6);
-}
-.policy_popup {
-    position: absolute;
-    z-index: 20;
-    top: -200px;
-    left: 0px;
-    height: 200px;
-    width: 100%;
-    background-color: #1D1D1D;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #E5E5E5;
-    border: 1px solid rgb(255, 139, 6);
-    font-family: var(--raleway), sans-serif;
-    font-weight: 400;
-    font-size: 1.3em;
-}
-@media (min-width: 621px) and (max-width: 810px) {
-    .policy_component {
-        width: 80%;
-    }
-    .policy_popup {
-        font-size: 1em;
-    }
-}
 @media (min-width: 451px) and (max-width: 620px) {
-    .policy_popup {
-        font-size: 1em;
-    }
-    .policy_component {
-        width: 80%;
-    }
-    .policy_info {
-        font-size: 0.8em;
-    }
     .footer_policies {
         font-size: 0.8em;
         width: max-content;
@@ -144,9 +67,6 @@
     }
 }
 @media (max-width: 450px) {
-    .policy_popup {
-        font-size: 0.8em;
-    }
     .footer_logo_button {
         margin-top: 20px;
         padding-bottom: 10px !important;
@@ -156,11 +76,6 @@
         flex-direction: column;
         justify-content: flex-start;
         width: 100%;       
-    }
-    .policy_component {
-        width: 100%;
-        height: 60%;
-        flex-direction: column;
     }
     .bottom_inner_container {
         flex-direction: column;
@@ -173,12 +88,6 @@
         align-items: flex-start;
         width: 100%;
         height: 50%;
-    }
-    .policy {
-        height: 50%;
-        width: auto;
-        justify-content: flex-start;
-        padding: 0 !important;
     }
     .footer_befound {
         width: 100%;
