Try more stable img size

--- a/components/EntryView/EntryView.module.css
+++ b/components/EntryView/EntryView.module.css
@@ -31,6 +31,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start; 
+    z-index: 10;
+    text-align: start;
 }
 .line {
     font-size: 4vw;
