--- a/components/Contacts/Person/Person.module.css
+++ b/components/Contacts/Person/Person.module.css
@@ -1,4 +1,4 @@
-.person_container {
+/* .person_container {
     width: 100%;
     background: #212121;
     box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.1);
@@ -69,4 +69,4 @@
     margin-block-start: 0;
     margin-block-end: 0;
     line-height: 26px;
-}
+} */
