--- a/components/ProjectSlider/ProjectSlider.module.css
+++ b/components/ProjectSlider/ProjectSlider.module.css
@@ -102,7 +102,7 @@
 }
 .mainpage_project_img_container {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     position: relative;
     display: flex;
     justify-content: flex-start;
