--- a/components/ProjectSlider/ProjectSlider.module.css
+++ b/components/ProjectSlider/ProjectSlider.module.css
@@ -126,11 +126,6 @@
     -webkit-transition: -webkit-transform 500ms ease;
     transition-duration: transform 500ms ease;
 }
-.project_mainpage_text_container {
-    z-index: 2;
-    /* padding-bottom: 32px;
-    padding-top: 32px; */
-}
 .project_mainpage_text_header {
     font-family: var(--raleway), sans-serif;
     font-style: normal;
@@ -200,7 +195,7 @@
 .project_button {
     background-color: transparent;
     border: none;
-    border-bottom: 2px solid #212121;
+    border-bottom: 2px solid rgb(38 38 38 / 0);
     height: 40px;
     color: #FFFFFF;
     opacity: 0.5;
