--- a/components/EntryView/EntryView.module.css
+++ b/components/EntryView/EntryView.module.css
@@ -29,10 +29,10 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start; 
+    justify-content: center;
+    align-items: center; 
     z-index: 10;
-    text-align: start;
+    text-align: center;
 }
 .line {
     font-size: 4vw;
