--- a/components/ProjectPage/ProjectPage.module.css
+++ b/components/ProjectPage/ProjectPage.module.css
@@ -67,10 +67,8 @@
     color: rgb(255, 255, 255);
     background: linear-gradient(to top, rgba(0,0,0,0.8), rgba(0,0,0,0));
 }
-.text_projectname {
-    max-width: 1880px;
+.font_k {
     font-family: var(--kameron), sans-serif;
-    width: 100%;
 }
 .pp_bottom_container {
     padding-top: 50px;
